@@ -1,3 +1,10 @@
+2005-01-15  Ralf Corsepius  <ralf.corsepius@rtems.org>
+
+	* config/mips/rtems.h (MIPS_DEFAULT_GVALUE): Set to 0.
+	* config/mips/t-rtems (MULTILIBS_DIRNAMES,MULTILIB_OPTIONS): 
+	Remove little endian multilib variants.
+	Add mips32 multilib variant.
+
 2005-01-14  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/aix52.h (CPLUSPLUS_CPP_SPEC): Revert last change.
